<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZMQ Video Chat</string>
    <string name="menu_settings">Settings</string>
    <string name="nick_name">Nickname</string>
    <string name="address">Address</string>
    <string name="chat_port">Chat Port</string>
    <string name="video_port">Video Port</string>
    <string name="event_port">Event Port</string>
    <string name="send">Send</string>

</resources>